# autogen-example

./: .env_template  .gitignore  LICENSE  README.md  context7.json  main.py  pyproject.toml  shell.nix
.github/instructions/: autogen-agent.instructions.md  autogen-condition.instructions.md  autogen-main.instructions.md  autogen-markdown.instructions.md  autogen-team.instructions.md
config/: model_config.py
examples/Workbench/StaticWorkbench/: README.md  main.py
examples/advance/custom_tool_call_agent/: README.md  tool_call_agent.py
examples/advance/excel_analysis/: planner_json_agent.py  tool_call_agent.py
examples/advance/excel_analysis_new/: main.py
examples/advance/excel_anaysis/: insight_json_agent.py  main.py
examples/advance/plan_and_solve/: main.py
examples/advance/prompt_template/: main.py
examples/advance/report_writer/: insight_agent_tool.py  main.py  tool_call_agent.py
examples/advance/report_writer_new/: README.md  main.py
examples/advance/test_excel_analysis/: main.py  output_data.json  test_excel.json
examples/agent/: hello_world.py
examples/agent/code_executor_agent/: README.md  main.py
examples/agent/custom_agent/: README.md  main.py
examples/agent/hello_world/: README.md
examples/agent/json_output_agent/: main.py
examples/agent/message_filter_agent/: README.md  main.py
examples/agent/society_of_mind_agent/: README.md  main.py
examples/agent/web_surfer/: main.py
examples/mcp/sse/: excel_mcp.py  main.py
examples/team/MagenticOneGroupChat/: README.md  main.py
examples/team/RoundRobinGroupChat/: README.md  main.py
(+11 files in other folders)
