[project]
name = "autogen-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "dotenv>=0.9.9",
    "fastmcp>=2.11.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright==1.52.0",
]
